testdata/baselines/reference/effect-v4/unknownInEffectCatch_preview.flows.txt
==== /.src/unknownInEffectCatch_preview.ts (1 flows) ====

=== Effect Flow ===
Kind: pipeline
Location: 5:23 - 8:3
Root: Effect.tryPromise({\n  try: async () => 1,\n  catch: (error) => error\n})
Path (3 nodes):
  [0] root {effect A=number E=unknown R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => Promise<number>; catch: (error: unknown) => unknown; }} {\n  try: async () => 1,\n  catch: (error) => error\n}
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=number E=unknown R=never} step 0: Effect.tryPromise

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: number
      result.E: unknown
      result.R: never
  [1] kind: pipeSubject
      label: {\n  try: async () => 1,\n  catch: (error) => error\n}
      ordinal: 0
      result.kind: plain
      result.A: { try: () => Promise<number>; catch: (error: unknown) => unknown; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.tryPromise
      ordinal: 0
      result.kind: effect
      result.A: number
      result.E: unknown
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call
